# EoAF

./: .gitignore  LICENSE  README.md  config.yaml  environment.yml  landsat.ipynb  pyproject.toml  sentinel_2.ipynb  viirs.ipynb
docs/: Satellite_Bands.md
shapefiles/: large.dbf  large.shp  large.shx  small.dbf  small.shp  small.shx
src/: landsat.py  sentinel.py  utils.py  viirs.py  visualisation.py
webui/: landsat_ui.py  sentinel_ui.py  viirs_ui.py  webui_utils.py
