[tool.poetry]
name = "EoAF"
version = "0.9.0"
description = "Dependencies for Australian Space Data Analysis Facility - Eyes on Australian Forests repository."
authors = ["Calvin Pang <calvin.pang@curtin.edu.au>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2024.2.0"
rioxarray = "^0.15.1"
numpy = "^1.26.4"
ipyleaflet = "^0.18.2"
rasterio = "^1.3.9"
matplotlib = "^3.8.3"
ipywidgets = "^8.1.2"
jupyterlab = "^4.1.2"
pystac-client = "^0.7.5"
typer = "^0.9.0"
geopandas = "^0.14.3"
ipyfilechooser = "^0.6.0"
tqdm = "^4.66.2"
cftime = "^1.6.3"
gradio = "^4.21.0"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
